--- a/sdi2021-113-spring/src/main/resources/application.properties
+++ b/sdi2021-113-spring/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=SA
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.thymeleaf.mode=LEGACYHTML5
